Fix company name

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ a {
 	          2012 &mdash; 2014
 	        </span>
 	      </div>
-	      <div>Family Farm</div>
+	      <div>LA Beauty</div>
 	      <ul class='highlights'>
 	        <li>Cashier</li>
           <li>Customer Service</li>
