--- a/index.html
+++ b/index.html
@@ -332,13 +332,15 @@ a {
         <span class='title'>Web Development:</span>
           <span>HTML</span>, 
           <span>CSS</span>, 
-          <span>Basic Javascript</span>
+          <span>Basic Javascript</span>,
+	  <span>Git</span>,
+	  <span>Command Line</span>
       </div>
       <div class='skillBlock'>
         <span class='title'>Misc:</span>
           <span>Technical Writing</span>, 
-          <span>Git</span>, 
-          <span>Command Line</span>
+          <span>Communication</span>, 
+          <span>Teamwork</span>
       </div>
     </div>
 	</div>
