--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ a {
     </div>
     <div class='sectionContent'>
       <span class='language'>English</span>
-      <span class='fluency'><em>(Native speaker)</em></span>
+      <span class='fluency'><em>(Native speaker)</em></span>,
       <span class='language'>Arabic (Egyptian)</span>
       <span class='fluency'><em>(Basic)</em></span>
     </div>
