--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ a {
     <div class='sectionContent'>
       <span class='language'>English</span>
       <span class='fluency'><em>(Native speaker)</em></span>,
-      <span class='language'>Arabic (Egyptian)</span>
+      <span class='language'>Egyptian Arabic</span>
       <span class='fluency'><em>(Basic)</em></span>
     </div>
     <div class='sectionLine'></div>
